force-app/main/default/objects/WorldCities__c/WorldCities__c.object-meta.xml
<CustomObject>
    <label>World Cities</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>World Cities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>