force-app/main/default/objects/WorldCities__c/fields/GoogleMapsLink__c.field-meta.xml
<CustomField>
    <fullName>GoogleMapsLink__c</fullName>
    <formula>HYPERLINK(&apos;https://www.google.com/maps?q=&apos; + Latitude__c + &apos;,&apos; + Longitude__c, &apos;Open link in Google Maps&apos;, &apos;_blank&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GoogleMaps Link</label>
    <type>Text</type>
</CustomField>