force-app/main/default/objects/WorldCities__c/fields/Latitude__c.field-meta.xml
<CustomField>
    <fullName>Latitude__c</fullName>
    <label>Latitude</label>
    <length>80</length>
    <type>Text</type>
</CustomField>