force-app/main/default/objects/WorldCities__c/fields/WorldCountries__c.field-meta.xml
<CustomField>
    <fullName>WorldCountries__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>WorldCountries</label>
    <referenceTo>WorldCountries__c</referenceTo>
    <relationshipLabel>World Cities</relationshipLabel>
    <relationshipName>World_Cities</relationshipName>
    <type>Lookup</type>
</CustomField>